--- a/ToeTacTic/app/src/main/res/values/strings.xml
+++ b/ToeTacTic/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="join">Join</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="player_name">Player name</string>
+    <string name="toetactic_title">ToeTacTic</string>
 </resources>
